ajout page a propos

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <nav id="navbar" class="navbar-collapse collapse">
 
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="about.html">A propos</a></li>
                 <li><a href="features.html">Fonctionnalités</a></li>
                 <li><a href="examples.html">Exemples</a></li>
                 <li class="nav-pipe"><a href="login.html">Connexion</a></li>
