--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700%7CMontserrat' rel='stylesheet' type='text/css'>
 
-    <link type="text/css" rel="stylesheet" href="../css/style.css" media="all"/>  
+    <link type="text/css" rel="stylesheet" href="css/style.css" media="all"/>  
 
 </head>
 
@@ -34,7 +34,6 @@
             <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo Bonballon"></a>
         </div>
         <nav id="navbar" class="navbar-collapse collapse">
-
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="about.html">A propos</a></li>
                 <li><a href="features.html">Fonctionnalités</a></li>
