--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="description" content="Bonballon, le générateur d&#039;équipes aléatoires.">
-    <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
 
+    <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="128x128" href="images/favicon.png">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="font-awesome/4.7.0/css/font-awesome.min.css">
@@ -79,18 +81,7 @@
 <form id="mix_form" name="mix" method="post" autocomplete="off" novalidate="novalidate">
 
 <div class="bg-dark-grey">
-    <div class="container padding-top ad-div">
-            <!-- leaderboard-top -->
-    <ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7854142479910574"
-     data-ad-slot="8147175496"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    </div>
+
 
     <div class="container padding-bloc">
 
@@ -635,20 +626,6 @@
         </div>
 
         <input id="mix__token" name="mix[_token]" value="r9rFB6tUU38nCZJT0Jhy0cieFPgzs53d4OLiBU7F8DA" type="hidden">
-
-    <div class="padding-top ad-div">
-                <!-- leaderboard-bottom -->
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-client="ca-pub-7854142479910574"
-            data-ad-slot="1275355822"
-            data-ad-format="auto"
-            data-full-width-responsive="true">
-        </ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-        </div>
 
         <div class="form-group btn-in-row padding-bloc-double">
             <button type="submit" id="mix_save" name="mix[save]" class="btn orange-btn large-keamk-btn">Générer les équipes</button>
