--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
 
     <meta name="description" content="Bonballon, le générateur d&#039;équipes aléatoires.">
     <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="128x128" href="images/favicon.png">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="bootstrap/3.3.5/css/bootstrap.min.css">
@@ -53,29 +55,16 @@
 
         <div class="homepage">
             <div class="bg-white">
-                <div class="container padding-top ad-div">
-                    <!-- leaderboard-top -->
-                    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7854142479910574"
-                        data-ad-slot="8147175496" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                    <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </div>
-
                 <div class="container text-center padding-bloc home-pres">
-
                     <h1>
                         Créer des équipes et des groupes aléatoires
                     </h1>
-
                     <p>
-                        Keamk est un générateur d&#039;équipes aléatoires utilisant différents critères tels que le
+                        Bonballon est un générateur d&#039;équipes aléatoires utilisant différents critères tels que le
                         niveau et le genre des participants.
-
                     </p>
-
                     <div class="padding-bloc-double">
-                        <a class="btn orange-btn large-keamk-btn" href="random-team-generator.html">
+                        <a class="btn orange-btn large-keamk-btn" href="index.html">
                             Créer des équipes
                         </a>
                     </div>
@@ -84,13 +73,10 @@
 
             <div class="bg-grey">
                 <div class="container padding-bloc-double home-domains">
-
                     <h1 class="text-center">
                         Comment ça marche ?
                     </h1>
-
-                    <p class="text-center">Simple et facile à utiliser. Vous pouvez profitez de Keamk sans inscription.
-                    </p>
+                    <p class="text-center">Simple et facile à utiliser. Vous pouvez profitez de Keamk sans inscription.</p>
 
                     <div class="row text-center padding-bloc">
                         <div class="col-sm-4">
@@ -132,7 +118,7 @@
 
                     <div class="row">
                         <div class="col-sm-6 text-center">
-                            <img src="../images/level-draw172f.png?19012901" alt="Level random">
+                            <img src="images/level-draw172f.png" alt="Level random">
 
                             <div class="padding-bloc">
                                 <h3>Niveau</h3>
@@ -144,9 +130,7 @@
                         </div>
 
                         <div class="col-sm-6 text-center">
-
-                            <img src="../images/gender-draw172f.png?19012901" alt="Gender random">
-
+                            <img src="images/gender-draw172f.png?19012901" alt="Gender random">
                             <div class="padding-bloc">
                                 <h3>Genre</h3>
                                 <p>
@@ -166,7 +150,7 @@
                 <div class="container padding-bloc-double home-domains">
 
                     <h1 class="text-center">
-                        Keamk vous aide dans de nombreux domaines
+                        Bonballon vous aide dans de nombreux domaines
                     </h1>
 
                     <div class="row text-center padding-bloc">
@@ -174,13 +158,10 @@
                             <span>
                                 <i class="fa fa-futbol-o"></i>
                             </span>
-
                             <h3>Sport</h3>
-
                             <p>
                                 Quel que soit votre sport, obtenez des équipes aléatoires et équilibrées pour vos
                                 rencontres sportives.
-
                             </p>
                         </div>
 
@@ -188,13 +169,10 @@
                             <span>
                                 <i class="fa fa-gamepad"></i>
                             </span>
-
                             <h3>Jeux vidéo</h3>
-
                             <p>
                                 Entre amis ou pour la compétition, organisez des tournois et des matchs pour vos jeux
                                 favoris.
-
                             </p>
                         </div>
 
@@ -202,13 +180,10 @@
                             <span>
                                 <i class="fa fa-graduation-cap"></i>
                             </span>
-
                             <h3>École</h3>
-
                             <p>
-                                Keamk aide les enseignants de tous niveaux à créer des groupes équilibrés pour leurs
+                                Bonballon aide les enseignants de tous niveaux à créer des groupes équilibrés pour leurs
                                 cours.
-
                             </p>
                         </div>
 
@@ -216,12 +191,9 @@
                             <span>
                                 <i class="fa fa-smile-o"></i>
                             </span>
-
                             <h3>Fun</h3>
-
                             <p>
                                 Fêtes, événements spéciaux, jeux de plateau, escape game et bien d&#039;autres encore.
-
                             </p>
                         </div>
 
@@ -264,7 +236,7 @@
                             <i class="fa fa-lock"></i>
                             <h3>Sécurité</h3>
                             <p>
-                                Les tirages sur Keamk sont anonymes, sécurisés et privés.
+                                Les tirages sur Bonballon sont anonymes, sécurisés et privés.
                             </p>
                         </div>
 
@@ -275,7 +247,7 @@
                             <i class="fa fa-mobile"></i>
                             <h3>Mobile friendly</h3>
                             <p>
-                                Keamk est optimisé pour s&#039;adapter aux smartphones et aux tablettes.
+                                Bonballon est optimisé pour s&#039;adapter aux smartphones et aux tablettes.
                             </p>
                         </div>
 
@@ -329,51 +301,20 @@
                     <a class="btn orange-btn large-keamk-btn" href="features.html">Toutes les fonctionnalités</a>
                 </div>
 
-                <div class="container padding-bloc-double ad-div">
-                    <!-- leaderboard-bottom -->
-                    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7854142479910574"
-                        data-ad-slot="1275355822" data-ad-format="auto" data-full-width-responsive="true"></ins>
-                    <script>
-                        (adsbygoogle = window.adsbygoogle || []).push({});
-                    </script>
-                </div>
-
             </div>
         </div>
 
 
     </div>
 
-    <footer>
-        <div class="footer-first">
-            <div class="container text-center">
-
-                <ul class="list-inline ul-social padding-bloc-double row">
-                    <li><a class="link-ext" href="https://www.facebook.com/keamkapp"><span><i
-                                    class="fa fa-facebook"></i></span></a></li>
-                    <li><a class="link-ext" href="https://twitter.com/keamkapp"><span><i
-                                    class="fa fa-twitter"></i></span></a></li>
-                </ul>
-
-                <ul class="list-inline ul-footer row">
-                    <li><a href="https://www.keamk.com/about">À propos</a></li>
-                    <li><a href="https://www.keamk.com/donate">Soutenir Keamk</a></li>
-                    <li><a href="https://www.keamk.com/contact">Contact</a></li>
-                    <li><a href="https://www.keamk.com/terms-of-service">CGU</a></li>
-                    <li><a href="https://www.keamk.com/privacy-policy">Politique de confidentialité</a></li>
-                </ul>
-
-            </div>
+<footer>
+    <div class="footer-second padding-bloc">
+        <div class="container text-center k-font-14">
+            <p>&copy; 2023 Bonballon</p>
+            <p>Réalisé par <a class="link-ext" href="#">XR Web</a></p>
         </div>
-        <div class="footer-second padding-bloc">
-            <div class="container text-center k-font-14">
-                <p>&copy; 2023 Keamk</p>
-                <p>
-                    Réalisé par <a class="link-ext" href="https://www.cavalcode.com/">Fabien Morin</a>
-                </p>
-            </div>
-        </div>
-    </footer>
+    </div>
+</footer>
 
     <!-- Button to scroll to top -->
     <div class="scroll-to-top">
