modif page log et relog

--- a/examples.html
+++ b/examples.html
@@ -83,9 +83,9 @@
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
                                     <img src="images/example/potluck-list172f.jpg"
-                                        alt="Organiser un dîner type auberge espagnole ou potluck (qui apporte quoi ?)" />
+                                        alt="Organiser un dîner avec plan de table" />
                                     <h5 class="ex-list-title text-left">
-                                        Organiser un dîner type auberge espagnole ou potluck (qui apporte quoi ?)
+                                        Organiser un dîner avec plan de table
                                     </h5>
                                 </a>
                             </div>
