--- a/features.html
+++ b/features.html
@@ -117,7 +117,7 @@
                     <div class="col-md-8 padding-btm">
                         <p>
                             Vous ne trouvez pas la fonctionnalité de vos rêves dans la liste ci-dessus. Vous avez une
-                            idée qui rendrait le service encore meilleur et que vous aimeriez voir apparaître sur Keamk.
+                            idée qui rendrait le service encore meilleur et que vous aimeriez voir apparaître sur Bonballon.<br>
                             Alors n&#039;hésitez pas à me faire part de vos suggestions.
 
                         </p>
