--- a/request.html
+++ b/request.html
@@ -49,12 +49,10 @@
 
     <div class="main-container">
 
-
-
         <div class="bg-white">
             <div class="container">
                 <h1 class="text-center">
-                    Connexion
+                    Mot de passe oublié
                 </h1>
             </div>
         </div>
@@ -62,80 +60,24 @@
         <div class="bg-grey">
             <div class="container">
 
-
-
                 <div class="col-md-6 col-md-offset-3 padding-bloc-triple">
 
-                    <div class="text-center margin-btm-small">
-                        Se connecter avec
-                    </div>
-
-                    <div class="social-connect text-center">
-                        <a class="btn middle-keamk-btn facebook-connect" href="#">
-                            <span><i class="fa fa-facebook"></i>&nbsp;</span>
-                            Facebook
-                        </a>
-
-                        <a class="btn middle-keamk-btn google-connect" href="#">
-                            <span><i class="fa fa-google"></i>&nbsp;</span>
-                            Google
-                        </a>
-
-                        <a class="btn middle-keamk-btn twitter-connect" href="#">
-                            <span><i class="fa fa-twitter"></i>&nbsp;</span>
-                            Twitter
-                        </a>
-                    </div>
-
-                    <div class="divider"></div>
-
-                    <div class="text-center padding-bloc margin-btm-small">
-                        Ou connectez-vous avec votre e-mail ou votre nom d&#039;utilisateur
-                    </div>
-
-
-                    <form action="#" method="post">
-
-                        <input type="hidden" name="_csrf_token" value="wunk6yJXFgM80N273anxmbGo5-p6SUOj3E2McG2_JoE" />
-
+                    <form action="/fr/resetting/send-email" method="POST" class="fos_user_resetting_request">
                         <div class="form-group">
                             <label for="username">Nom d&#039;utilisateur ou adresse e-mail</label>
-                            <input type="text" id="username" class="form-control" name="_username" value=""
-                                required="required" />
-                        </div>
-
-                        <div class="form-group">
-                            <label for="password">Mot de passe</label>
-                            <input type="password" id="password" class="form-control" name="_password"
-                                required="required" />
-                        </div>
-
-                        <div class="form-group">
-                            <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                            <label for="remember_me">Se souvenir de moi</label>
+                            <input type="text" id="username" name="username" class="form-control" required="required" />
                         </div>
 
                         <div>
-                            <input type="submit" id="_submit" class="btn orange-btn middle-keamk-btn" name="_submit"
-                                value="Connexion" />
+                            <input type="submit" class="btn orange-btn middle-keamk-btn"
+                                value="Réinitialiser le mot de passe" />
                         </div>
-
                     </form>
 
-                    <div class="padding-bloc k-font-14">
-                        <a href="request.html">Mot de passe oublié ?</a>
-                    </div>
-
-                    <div class="divider"></div>
-
-                    <div class="text-center padding-bloc-double">
-                        Nouveau sur Bonballon ? <a href="register.html">Inscrivez-vous !</a>
-                    </div>
-
                 </div>
-
             </div>
         </div>
+
 
     </div>
 
@@ -160,7 +102,7 @@
     <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/bundles/fosjsrouting/js/router172f.js"></script>
     <script src="https://www.keamk.com/js/routing"></script>
-    <script src="js/main.js"></script>  
+    <script src="js/main.js"></script> 
 
 </body>
 
