creation page test et modif routing

--- a/features.html
+++ b/features.html
@@ -155,7 +155,7 @@
     <script src="js/jquery/1.11.3/jquery.min.js"></script>
     <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/bundles/fosjsrouting/js/router172f.js"></script>
-    <script src="js/routing"></script>
+    <script src="https://bonballon.netlify.app/js/routing"></script>
     <script src="js/main.js"></script> 
 
 </body>
