--- a/fr/examples.html
+++ b/fr/examples.html
@@ -8,15 +8,15 @@
     <meta name="description" content="Bonballon, le générateur d&#039;équipes aléatoires.">
 
     <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="128x128" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="128x128" href="../images/favicon.png">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700%7CMontserrat' rel='stylesheet' type='text/css'>
 
-    <link type="text/css" rel="stylesheet" href="css/style.css" media="all"/>  
+    <link type="text/css" rel="stylesheet" href="../css/style.css" media="all"/>  
 
 </head>
 
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo Bonballon"></a>
+                <a class="navbar-brand" href="index.html"><img src="../images/logo.png" alt="Logo Bonballon"></a>
             </div>
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -72,7 +72,7 @@
 
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
-                                    <img src="images/example/basketball-list172f.jpg"
+                                    <img src="../images/example/basketball-list172f.jpg"
                                         alt="Basketball : équipes équilibrées" />
                                     <h5 class="ex-list-title text-left">
                                         Basketball : équipes équilibrées
@@ -82,7 +82,7 @@
 
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
-                                    <img src="images/example/potluck-list172f.jpg"
+                                    <img src="../images/example/potluck-list172f.jpg"
                                         alt="Organiser un dîner avec plan de table" />
                                     <h5 class="ex-list-title text-left">
                                         Organiser un dîner avec plan de table
@@ -92,7 +92,7 @@
 
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
-                                    <img src="images/example/tennis-list172f.jpg"
+                                    <img src="../images/example/tennis-list172f.jpg"
                                         alt="Tennis : équipes de double mixte" />
                                     <h5 class="ex-list-title text-left">
                                         Tennis : équipes de double mixte
@@ -102,7 +102,7 @@
 
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
-                                    <img src="images/example/assign-task-list172f.jpg"
+                                    <img src="../images/example/assign-task-list172f.jpg"
                                         alt="Assigner aléatoirement des tâches dans un groupe de personnes" />
                                     <h5 class="ex-list-title text-left">
                                         Assigner aléatoirement des tâches dans un groupe de personnes
@@ -115,7 +115,7 @@
 
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
-                                    <img src="images/example/futsal-list172f.jpg" alt="Futsal / Foot 5" />
+                                    <img src="../images/example/futsal-list172f.jpg" alt="Futsal / Foot 5" />
                                     <h5 class="ex-list-title text-left">
                                         Futsal / Foot 5
                                     </h5>
@@ -124,7 +124,7 @@
 
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
-                                    <img src="images/example/dinner-list172f.jpg"
+                                    <img src="../images/example/dinner-list172f.jpg"
                                         alt="Plan de table pour dîner, évènement ou mariage" />
                                     <h5 class="ex-list-title text-left">
                                         Plan de table pour dîner, évènement ou mariage
@@ -134,17 +134,17 @@
 
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
-                                    <img src="images/example/board-game-list172f.jpg"
+                                    <img src="../images/example/board-game-list172f.jpg"
                                         alt="Équipes pour jeux de société" />
                                     <h5 class="ex-list-title text-left">
-                                        Équipes pour jeux de société
+                                        Jeux de société
                                     </h5>
                                 </a>
                             </div>
 
                             <div class="col-sm-3 col-xs-6 padding-bloc-small">
                                 <a href="#">
-                                    <img src="images/example/pingpong-list172f.jpg"
+                                    <img src="../images/example/pingpong-list172f.jpg"
                                         alt="PingPong" />
                                     <h5 class="ex-list-title text-left">
                                         Ping-Pong
@@ -179,11 +179,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery/1.11.3/jquery.min.js"></script>
-    <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/bundles/fosjsrouting/js/router172f.js"></script>
+    <script src="../js/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="../js/bundles/fosjsrouting/js/router172f.js"></script>
     <script src="https://bonballon.netlify.app/js/routing"></script>
-    <script src="js/main.js"></script>  
+    <script src="../js/main.js"></script>  
 
 </body>
 
