--- a/fr/about.html
+++ b/fr/about.html
@@ -8,17 +8,17 @@
 
     <meta name="description" content="Bonballon, le générateur d&#039;équipes aléatoires.">
     <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="128x128" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="128x128" href="../images/favicon.png">
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700%7CMontserrat' rel='stylesheet'
         type='text/css'>
 
-    <link type="text/css" rel="stylesheet" href="css/style.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="../css/style.css" media="all" />
 
 </head>
 
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo Bonballon"></a>
+                <a class="navbar-brand" href="index.html"><img src="../images/logo.png" alt="Logo Bonballon"></a>
             </div>
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -118,7 +118,7 @@
 
                     <div class="row">
                         <div class="col-sm-6 text-center">
-                            <img src="images/level-draw172f.png" alt="Level random">
+                            <img src="../images/level-draw172f.png" alt="Level random">
 
                             <div class="padding-bloc">
                                 <h3>Niveau</h3>
@@ -130,7 +130,7 @@
                         </div>
 
                         <div class="col-sm-6 text-center">
-                            <img src="images/gender-draw172f.png?19012901" alt="Gender random">
+                            <img src="../images/gender-draw172f.png?19012901" alt="Gender random">
                             <div class="padding-bloc">
                                 <h3>Genre</h3>
                                 <p>
@@ -322,11 +322,11 @@
     </div>
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery/1.11.3/jquery.min.js"></script>
-    <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/bundles/fosjsrouting/js/router172f.js"></script>
+    <script src="../js/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="../js/bundles/fosjsrouting/js/router172f.js"></script>
     <script src="https://bonballon.netlify.app/js/routing"></script>
-    <script src="js/main.js"></script>  
+    <script src="../js/main.js"></script>  
 
 </body>
 
