--- a/fr/request.html
+++ b/fr/request.html
@@ -8,15 +8,15 @@
     <meta name="description" content="Bonballon, le générateur d&#039;équipes aléatoires.">
 
     <title>Générateur d&#039;équipes aléatoires - Bonballon</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" sizes="128x128" href="images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="apple-touch-icon" sizes="128x128" href="../images/favicon.png">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,500,600,700%7CMontserrat' rel='stylesheet' type='text/css'>
 
-    <link type="text/css" rel="stylesheet" href="css/style.css" media="all"/>  
+    <link type="text/css" rel="stylesheet" href="../css/style.css" media="all"/>  
 
 </head>
 
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Logo Bonballon"></a>
+                <a class="navbar-brand" href="index.html"><img src="../images/logo.png" alt="Logo Bonballon"></a>
             </div>
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -62,7 +62,7 @@
 
                 <div class="col-md-6 col-md-offset-3 padding-bloc-triple">
 
-                    <form action="/fr/resetting/send-email" method="POST" class="fos_user_resetting_request">
+                    <form action="#" method="POST" class="fos_user_resetting_request">
                         <div class="form-group">
                             <label for="username">Nom d&#039;utilisateur ou adresse e-mail</label>
                             <input type="text" id="username" name="username" class="form-control" required="required" />
@@ -98,11 +98,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery/1.11.3/jquery.min.js"></script>
-    <script src="bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/bundles/fosjsrouting/js/router172f.js"></script>
+    <script src="../js/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="../js/bundles/fosjsrouting/js/router172f.js"></script>
     <script src="https://bonballon.netlify.app/js/routing"></script>
-    <script src="js/main.js"></script> 
+    <script src="../js/main.js"></script> 
 
 </body>
 
