--- a/fr/about.html
+++ b/fr/about.html
@@ -119,40 +119,90 @@
                     <div class="row">
                         <div class="col-sm-6 text-center">
                             <img src="../images/level-draw172f.png" alt="Level random">
-
                             <div class="padding-bloc">
-                                <h3>Niveau</h3>
+                                <h2>Niveau</h2>
                                 <p>
                                     Attribuez une note allant de 1 à 5 à vos participants et obtenez des équipes
                                     aleatoires équilibrées.
                                 </p>
                             </div>
                         </div>
-
-                        <div class="col-sm-6 text-center">
-                            <img src="../images/gender-draw172f.png?19012901" alt="Gender random">
-                            <div class="padding-bloc">
-                                <h3>Genre</h3>
-                                <p>
-                                    Sélectionnez un genre pour vos participants et obtenez des groupes mixtes
-                                    aléatoires.
-                                </p>
-                            </div>
-                        </div>
-
                     </div>
-
+                    <div class="row text-center padding-bloc">
+                        <div class="col-sm-3">
+                            <span>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </span>
+                            <h3>Nul à chier</h3>
+                            <p>
+                                Aucune coordination motrice, il ne maitrise pas son ballon, ne sait pas faire une passe et un contrôle. 
+                                Il ne fait pas d’effort physiques pour rattraper ses faiblesses techniques.
+                                Régulier dans la nullité.
+                            </p>
+                        </div>
+                        <div class="col-sm-3">
+                            <span>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </span>
+                            <h3>13h30 Villefranche</h3>
+                            <p>
+                                Beaucoup de déchets techniques dans les passes et les contrôles, 
+                                il n’a pas la vision du jeu mais il peut surprendre dans certains matchs par quelques coups de génie.
+                                Il a envie de bien faire et se rattrape pas ses efforts défensifs.  
+                            </p>
+                        </div>
+                        <div class="col-sm-3">
+                            <span>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </span>
+                            <h3>Bon soldat</h3>
+                            <p>
+                                Un joueur qui possède un peu de ballon et des bases solides.
+                                Quelques déchets techniques par moment mais sait aligner une passe, un contrôle et une frappe.
+                                Dommage, il manque de régularité mais peut peser sur une rencontre lorsqu’il est en forme.  
+                            </p>
+                        </div>
+                        <div class="col-sm-3">
+                            <span>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </span>
+                            <h3>Joueur solide</h3>
+                            <p>
+                                Joueur régulier avec très peu de déchets techniques.
+                                Il sait défendre et attaquer.
+                                Par ses qualités techniques et sa vision du jeu, il a une influence sur le jeu et son équipe. 
+                            </p>
+                        </div>
+                        <div class="col-sm-3">
+                            <span>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                                <i class="fa fa-star" aria-hidden="true"></i>
+                            </span>
+                            <h3>Masterclass</h3>
+                            <p>
+                                Bon dans tous les domaines, c’est un joueur très précis dans ses passes, ses contrôles et ses frappes.
+                                Il peut éliminer des joueurs facilement par ses dribbles.
+                                Joueur pouvant faire basculer la rencontre à lui tout seul.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-
             </div>
 
             <div class="bg-grey">
                 <div class="container padding-bloc-double home-domains">
-
                     <h1 class="text-center">
                         Bonballon vous aide dans de nombreux domaines
                     </h1>
-
                     <div class="row text-center padding-bloc">
                         <div class="col-sm-3">
                             <span>
@@ -164,7 +214,6 @@
                                 rencontres sportives.
                             </p>
                         </div>
-
                         <div class="col-sm-3">
                             <span>
                                 <i class="fa fa-gamepad"></i>
