--- a/fr/features.html
+++ b/fr/features.html
@@ -70,9 +70,7 @@
                             <h2>Faire des groupes aléatoires</h2>
                             <ul class="list-unstyled padding-bloc">
                                 <li>générer des équipes totalement aléatoires</li>
-                                <li>option pour obtenir des groupes mixtes (homme / femme)</li>
-                                <li>option pour des groupes équilibrés basés sur le niveau des participants (de 1 à 5)
-                                </li>
+                                <li>option pour des groupes équilibrés basés sur le niveau des participants (de 1 à 5)</li>
                                 <li>possibilité de copier-coller une liste de participants</li>
                                 <li>utiliser des listes préalablement enregistrées</li>
                             </ul>
@@ -80,7 +78,7 @@
                         <div class="col-md-6">
                             <h2>Partager les résultats</h2>
                             <ul class="list-unstyled padding-bloc">
-                                <li>partager sur les réseaux sociaux : Facebook, Twitter et Reddit</li>
+                                <li>partager sur les réseaux sociaux : Facebook, Twitter et Whatsapp</li>
                                 <li>exporter les résultats d&#039;un tirage sous forme de fichier Excel</li>
                                 <li>communiquer un tirage grâce à son lien unique (URL)</li>
                                 <li>intégrer facilement un tirage à un site Internet</li>
@@ -93,9 +91,9 @@
                             <h2>Gérer les tirages</h2>
                             <ul class="list-unstyled padding-bloc">
                                 <li>modifier, relancer, dupliquer, supprimer un tirage</li>
-                                <li>masquer les options (genre / niveau) lorsque vous partagez un tirage</li>
+                                <li>masquer l'options (niveau) lorsque vous partagez un tirage</li>
                                 <li>envoyer le lien d&#039;administration d&#039;un tirage par email</li>
-                                <li>garder sur votre compte Keamk tous vos tirages effectués (historique)</li>
+                                <li>garder sur votre compte tous vos tirages effectués (historique)</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
@@ -119,13 +117,11 @@
                             Vous ne trouvez pas la fonctionnalité de vos rêves dans la liste ci-dessus. Vous avez une
                             idée qui rendrait le service encore meilleur et que vous aimeriez voir apparaître sur Bonballon.<br>
                             Alors n&#039;hésitez pas à me faire part de vos suggestions.
-
                         </p>
                     </div>
                     <div class="col-md-4">
                         <div class="text-center home-features-button">
-                            <a class="btn orange-btn large-keamk-btn" href="contact.html"><i
-                                    class="fa fa-lightbulb-o" aria-hidden="true"></i> Contact</a>
+                            <a class="btn orange-btn large-keamk-btn" href="#">Contact</a>
                         </div>
                     </div>
                 </div>
