--- a/fr/about.html
+++ b/fr/about.html
@@ -39,11 +39,9 @@
             </div>
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">A propos</a></li>
                     <li><a href="features.html">Fonctionnalités</a></li>
-                    <li><a href="examples.html">Exemples</a></li>
-                    <li class="nav-pipe"><a href="login.html">Connexion</a></li>
-                    <li><a href="register.html">Inscription</a></li>
                 </ul>
             </nav>
         </div>
@@ -61,7 +59,7 @@
                     </h1>
                     <p>
                         Bonballon est un générateur d&#039;équipes aléatoires utilisant différents critères tels que le
-                        niveau et le genre des participants.
+                        niveau des participants.
                     </p>
                     <div class="padding-bloc-double">
                         <a class="btn orange-btn large-keamk-btn" href="index.html">
@@ -76,15 +74,15 @@
                     <h1 class="text-center">
                         Comment ça marche ?
                     </h1>
-                    <p class="text-center">Simple et facile à utiliser. Vous pouvez profitez de Keamk sans inscription.</p>
+                    <p class="text-center">Simple et facile à utiliser. Vous pouvez profitez de Bonballon sans inscription.</p>
 
                     <div class="row text-center padding-bloc">
                         <div class="col-sm-4">
                             <span>1</span>
                             <h3>Générer</h3>
                             <p>Commencez par renseigner les éléments de votre tirage : titre, participants et équipes.
-                                Choisissez ensuite le type de votre tirage : normal, par niveau ou par genre. Puis
-                                laissez Keamk faire vos groupes.
+                                Choisissez ensuite le type de votre tirage : normal ou par niveau. Puis
+                                laissez Bonballon faire vos groupes.
                             </p>
                         </div>
 
@@ -248,10 +246,6 @@
 
                     </div>
 
-                    <div class="text-center padding-bloc-double">
-                        <a class="btn orange-btn large-keamk-btn" href="examples.html">Exemples</a>
-                    </div>
-
                 </div>
             </div>
 
@@ -318,21 +312,6 @@
                     </div>
 
                     <div class="row text-center padding-bloc-small">
-                        <div class="col-sm-4">
-                            <i class="fa fa-comment-o"></i>
-                            <h3>Commenter</h3>
-                            <p>
-                                Prenez la parole et laissez votre avis sur le résultat d&#039;un tirage.
-                            </p>
-                        </div>
-
-                        <div class="col-sm-4">
-                            <i class="fa fa-clock-o"></i>
-                            <h3>Historique</h3>
-                            <p>
-                                Gardez une trace des tirages que vous avez effectués.
-                            </p>
-                        </div>
 
                         <div class="col-sm-4">
                             <i class="fa fa-list"></i>
@@ -360,7 +339,7 @@
     <div class="footer-second padding-bloc">
         <div class="container text-center k-font-14">
             <p>&copy; 2023 Bonballon</p>
-            <p>Réalisé par <a class="link-ext" href="#">XR Web</a></p>
+            <p>Réalisé par <a class="link-ext" href="https://xrweb06.netlify.app">XR Web</a></p>
         </div>
     </div>
 </footer>
