--- a/fr/features.html
+++ b/fr/features.html
@@ -39,11 +39,9 @@
             </div>
             <nav id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="about.html">A propos</a></li>
                     <li><a href="features.html">Fonctionnalités</a></li>
-                    <li><a href="examples.html">Exemples</a></li>
-                    <li class="nav-pipe"><a href="login.html">Connexion</a></li>
-                    <li><a href="register.html">Inscription</a></li>
                 </ul>
             </nav>
         </div>
@@ -93,7 +91,6 @@
                                 <li>modifier, relancer, dupliquer, supprimer un tirage</li>
                                 <li>masquer l'options (niveau) lorsque vous partagez un tirage</li>
                                 <li>envoyer le lien d&#039;administration d&#039;un tirage par email</li>
-                                <li>garder sur votre compte tous vos tirages effectués (historique)</li>
                             </ul>
                         </div>
                         <div class="col-md-6">
@@ -135,7 +132,7 @@
         <div class="footer-second padding-bloc">
             <div class="container text-center k-font-14">
                 <p>&copy; 2023 Bonballon</p>
-                <p>Réalisé par <a class="link-ext" href="#">XR Web</a></p>
+                <p>Réalisé par <a class="link-ext" href="https://xrweb06.netlify.app">XR Web</a></p>
             </div>
         </div>
     </footer>
