--- a/fr/index.html
+++ b/fr/index.html
@@ -37,11 +37,9 @@
         </div>
         <nav id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">A propos</a></li>
                 <li><a href="features.html">Fonctionnalités</a></li>
-                <li><a href="examples.html">Exemples</a></li>
-                <li class="nav-pipe"><a href="login.html">Connexion</a></li>
-                <li><a href="register.html">Inscription</a></li>
             </ul>
         </nav>
     </div>
@@ -102,12 +100,6 @@
                 </div>
             </div>
 
-        </div>
-
-        <div class="row">
-            <p class="col-md-12 p-dark">
-                Pour sauvegarder et administrer facilement vos tirages, <a href="login.html">connectez-vous</a> ou <a href="register.html">créez un compte</a>. Mais ce n'est pas obligatoire.
-            </p>
         </div>
 
     </div>
@@ -637,7 +629,7 @@
     <div class="footer-second padding-bloc">
         <div class="container text-center k-font-14">
             <p>&copy; 2023 Bonballon</p>
-            <p>Réalisé par <a class="link-ext" href="#">XR Web</a></p>
+            <p>Réalisé par <a class="link-ext" href="https://xrweb06.netlify.app">XR Web</a></p>
         </div>
     </div>
 </footer>
